# py-aws-lambda-local

./: .gitignore  README.md  pyproject.toml
awslambdalocal/: __main__.py
lambdalocal/: __main__.py
