[tool.poetry]
name = "lambdalocal"
version = "1.0.0"
description =  "An API and services for backoffice teams"
authors = ["Lets Delivery Teams <devteams@lets.delivery>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"