[tool.poetry]
name = "lambdalocal"
version = "1.0.0"
description =  "A tool to simulate running an AWS Lambda locally"
authors = ["Miqueias BRS <miqueias@capybaracode.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"